# ai_agents

./: .gitignore  README.md
homework_1/: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_main.py
homework_2/: .env.example  README.md  assignment.md  deploy.py  docker-compose.yml  init-db.js  pyproject.toml
homework_2/workflows/: homework_2_workflow.json
homework_3/: .env.example  README.md  assignment.md  main.py  pyproject.toml  server.py
homework_3/math_agent/: __init__.py  graph.py  state.py
homework_3/math_agent/nodes/: action_node.py  parsing_node.py  reasoning_node.py
homework_3/math_agent/utils/: llm.py  mcp_client.py
homework_3/tools/: __init__.py  calculator.py  python_repl.py  wolfram.py
homework_4/: README.md  assignment.md  demo.py  evaluate.py  pyproject.toml  random_agent.py  train.py
homework_4/models/: q_table_demo.pkl
homework_4/mountain_car/: __init__.py  agent.py  environment.py
